--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <h1>
         Hey, Welcome to Khasse's Website
     </h1>
-    <img src="https://imgur.com/a/m9ckvXU">
+    <img src="https://github.com/stardarkcs/mywebsite/blob/main/Capture.PNG">
     <body>
         <h2>About me:</h2>
         <p>
