--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <h1>
         Hey, Welcome to Khasse's Website
     </h1>
+    <img src="https://img.freepik.com/premium-photo/head-lettuce-with-face-drawn-it_910054-11854.jpg">
     <body>
         <h2>About me:</h2>
         <p>
@@ -26,4 +27,3 @@
         </p>
     </body>
 </html>
-<img src="https://github.com/stardarkcs/mywebsite/blob/main/Capture.PNG">
