--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <h1>
         Hey, Welcome to Khasse's Website
     </h1>
-    <img src="https://img.freepik.com/premium-photo/head-lettuce-with-face-drawn-it_910054-11854.jpg">
+    <img src="https://img.freepik.com/premium-photo/head-lettuce-with-face-drawn-it_910054-11854.jpg" ="250" ="250">
     <body>
         <h2>About me:</h2>
         <p>
