--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 		<div class="container">
 			<div class="navbar-brand">
 				<span class="navbar-logo">
-					<a href="https://mobiri.se">
+					<a href="">
 						<img src="https://r.mobirisesite.com/552331/assets/images/photo-1551892589-865f69869476.jpeg" alt="Mobirise Website Builder" style="height: 4.3rem;">
 					</a>
 				</span>
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobiri.se">José</a></span>
+				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="">José</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
