--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
 						<a class="nav-link link text-black display-4" href="" aria-expanded="false">Studies</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="=">Contact</a>
+						<a class="nav-link link text-black display-4" href="">Contact</a>
 					</li>
 				</ul>
 				
 				<div class="navbar-buttons mbr-section-btn">
-					<a class="btn btn-primary display-4" href="=">Explore More</a>
+					<a class="btn btn-primary display-4" href="">Explore More</a>
 				</div>
 			</div>
 		</div>
