--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
                 <div class="item features-without-image col-12">
                   <div class="item-wrapper">
                       <h5 class="mbr-card-title mbr-fonts-style mt-0 mb-3 display-5">
-                          <strong>Favorite Bible Verses?</strong></h5>
-                      <p class="mbr-text mbr-fonts-style mt-0 mb-3 display-7">Delve into the depths of wisdom with the most profound verses at the bottom of this page from the NI Bible version.</p>
+                          <strong>Favorite Bible Verse?</strong></h5>
+                      <p class="mbr-text mbr-fonts-style mt-0 mb-3 display-7">But as for you, be strong and do not give up, for your work will be rewarded - 2 Chronicles 15:7</p>
                   </div>
               </div>
               <div class="item features-without-image col-12">
