--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			<div class="navbar-brand">
 				<span class="navbar-logo">
 					<a href="">
-						<img src="https://r.mobirisesite.com/552331/assets/images/photo-1551892589-865f69869476.jpeg" alt="Mobirise Website Builder" style="height: 4.3rem;">
+						<img src="https://github.com/joseworld/jose/blob/main/193756d4749e3d9eb31b8555a0fa0ba9.jpg" alt="Mobirise Website Builder" style="height: 4.3rem;">
 					</a>
 				</span>
 				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="">José</a></span>
