--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
             <p class="mbr-text mbr-fonts-style mb-3 display-7">Jan 1, 2022</p>
             <p class="mbr-text mbr-fonts-style mb-3 display-7">José successfully completed his Finance degree, showcasing his dedication and expertise in financial matters.</p>
             <div class="mbr-section-btn item-footer">
-              <a href="" class="btn item-btn btn-primary display-7">Read</a>
+              <a href="https://aul.edu.lb/" class="btn item-btn btn-primary display-7">Read</a>
             </div>
           </div>
         </div>
@@ -562,7 +562,7 @@
             <p class="mbr-text mbr-fonts-style mb-3 display-7">Dec 23, 2023</p>
             <p class="mbr-text mbr-fonts-style mb-3 display-7">José proudly obtained two prestigious Cybersecurity Certifications from CISCO and ALISON, solidifying his expertise in safeguarding digital assets.</p>
             <div class="mbr-section-btn item-footer">
-              <a href="" class="btn item-btn btn-primary display-7">Read</a>
+              <a href="https://alison.com/certification/check/2y10ZYEZBiJMiHMrs2gcUBFwtwrWx77TGX97sY3GTUamgAreFV64c7G" class="btn item-btn btn-primary display-7">Read</a>
             </div>
           </div>
         </div>
@@ -703,9 +703,9 @@
             <strong>Contact José</strong>
           </h5>
           <p class="mbr-section-subtitle mbr-fonts-style mt-0 mb-4 display-7">
-            Phone: +1 800-553-6387
-            <br>Email: jose@cisco.net
-            <br>Address:  USA, Cali
+            Phone: Not Available
+            <br>Email: khossesamaha444@gmail.com
+            <br>Address:  Lebanon
             <br>Availability: 24/7
           </p> 
 
