--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="">About</a>
+						<a class="nav-link link text-black display-4" href="#down">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="" aria-expanded="false">Studies</a>
+						<a class="nav-link link text-black display-4" href="#down+#down" aria-expanded="false">Studies</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="">Contact</a>
+						<a class="nav-link link text-black display-4" href="#end">Contact</a>
 					</li>
 				</ul>
 				
