--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="#down">About</a>
+						<a input type="button" onClick="document.getElementById('middle').scrollIntoView();">About</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link link text-black display-4" href="#down+#down" aria-expanded="false">Studies</a>
@@ -703,7 +703,7 @@
             <strong>Contact José</strong>
           </h5>
           <p class="mbr-section-subtitle mbr-fonts-style mt-0 mb-4 display-7">
-            Phone: Not Available
+            Phone: Private
             <br>Email: khossesamaha444@gmail.com
             <br>Address:  Lebanon
             <br>Availability: 24/7
