--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
 					<li class="nav-item">
-						<button id="scrollToBottomBtn">About</button>
+						<button id="scrollToBottomBtn" class="nav-link link text-black display-4">About</button>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link link text-black display-4" href="" aria-expanded="false">Studies</a>
