--- a/index.html
+++ b/index.html
@@ -618,28 +618,18 @@
             <div class="col-12">
                 <div class="social-row">
                     <div class="soc-item">
-                        <a href="" target="_blank">
+                        <a href="https://www.facebook.com/Khosse1.samaha1" target="_blank">
                             <span class="mbr-iconfont socicon socicon-facebook"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="" target="_blank">
-                            <span class="mbr-iconfont socicon-twitter socicon"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
-                        <a href="" target="_blank">
+                        <a href="https://www.instagram.com/jose.samaha/?igsh=YzljYTk1ODg3Zg%3D%3D" target="_blank">
                             <span class="mbr-iconfont socicon-instagram socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="" target="_blank">
+                        <a href="https://www.linkedin.com/in/khoss%C3%A9-samaha-2a1324298/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
                             <span class="mbr-iconfont socicon socicon-linkedin"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
-                        <a href="" target="_blank">
-                            <span class="mbr-iconfont socicon socicon-twitch"></span>
                         </a>
                     </div>
                 </div>
