--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Athena Ozanich's Portfolio</title>
+  <title>José Samaha's Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -10,7 +10,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Athena Ozanich</li>
+          <li class="name">José Samaha</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
@@ -18,8 +18,8 @@
 
     <header>
       <img src="images/me.jpg" alt="A glance at me!" class="profile-image">
-      <h1 class="tag name">Hello! I’m Athena, welcome to my portfolio.</h1>
-      <p class="tag location">I currently live in Cleveland, Ohio</p>
+      <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
+      <p class="tag location">I currently live in Lebanon</p>
     </header>
 
     <main class="flex">
@@ -49,9 +49,9 @@
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/AthenaOneFight?lang=en" class="social twitter">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/in/athena-ozanich-777332149/" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/athenaozanich" class="social github">Github</a></li>
+        <li><a href="https://www.instagram.com/jose.samaha/?igsh=YzljYTk1ODg3Zg%3D%3D" class="social instagram">Instagram</a></li>
+        <li><a href="https://www.linkedin.com/in/khoss%C3%A9-samaha-2a1324298/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://www.facebook.com/Khosse1.samaha1" class="social facebook">Facebook</a></li>
       </ul>
 
     </footer>
