--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-      <img src="images/me.jpg" alt="A glance at me!" class="profile-image">
+      <img src="images/me.jpeg" alt="A glance at me!" class="profile-image">
       <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
       <p class="tag location">I currently live in Lebanon</p>
     </header>
@@ -49,9 +49,7 @@
     </main>
     <footer>
       <ul>
-        <li><a href="https://www.instagram.com/jose.samaha/?igsh=YzljYTk1ODg3Zg%3D%3D" class="social instagram">Instagram</a></li>
         <li><a href="https://www.linkedin.com/in/khoss%C3%A9-samaha-2a1324298/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://www.facebook.com/Khosse1.samaha1" class="social facebook">Facebook</a></li>
       </ul>
 
     </footer>
