--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-      <img src="images/me.jpeg" alt="A glance at me!" class="profile-image">
+      <img src="images/me.png" alt="A glance at me!" class="profile-image">
       <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
       <p class="tag location">I currently live in Lebanon</p>
     </header>
