--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Athena Ozanich's Portfolio</title>
+  <title>José's Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -10,7 +10,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Athena Ozanich</li>
+          <li class="name">José Samaha</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
@@ -19,13 +19,13 @@
     <header>
       <img src="images/me.png" alt="A glance at me!" class="profile-image">
       <h1 class="tag name">A peek into my experience.</h1>
-      <p class="tag location">I currently live in Cleveland, Ohio. I am however wiling to relocate.</p>
+      <p class="tag location">I currently live in Lebanon.</p>
     </header>
   
     <main class="flex">
       <div class="card">
         <h2>My art at a glance</h2>
-        <p>A space scene I made a few months ago.</p>
+        <p>Certifications Earned</p>
         <img src="images/Space-scene0002.jpg" alt="Some art" class="thumbnail">
         <ul class="skills">
           <li>Illustrator</li>
