--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
     <header>
       <img src="images/me.png" alt="A glance at me!" class="profile-image">
       <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
-      <p class="tag location">I currently live in Lebanon</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Me at a glance.</h2>
-        <p>I'm an aspiring designer/developer always working to build new skills and hone my existing ones. I enjoy not only the work, but the results as well, ranging from the satifaction of seeing the finished product all the way to the satisfaction of knowing my work is ultimately helping someone somewhere. I look forward to finding work in a firm or company that cares not only about gain, but also its positive impact on the world via clients, product and employees.</p>
-        <p>I've spent most of my life attempting to find "my calling", and while I've come to experience work in a great many fields, including residential contruction, mechanics, tattooing, glassblowing, and web development just to name a few. I have taken quite easily to all the work I've done over the years and as well have enjoyed it, but nothing feels quite like this does. This I enjoy passsionately and hope to grow that passion into a career I can enjoy and love.</p>
+        <h2>About me</h2>
+        <p>I am</p>
       </div>
 
       <div class="card">
