--- a/experience.html
+++ b/experience.html
@@ -24,9 +24,9 @@
   
     <main class="flex">
       <div class="card">
-        <h2>My art at a glance</h2>
-        <p>Certifications Earned</p>
-        <img src="images/Space-scene0002.jpg" alt="Some art" class="thumbnail">
+        <h2>Why Finance Degree?</h2>
+        <p>Finance is the backbone of every successful venture, and I wanted to master it to conquer the business world.</p>
+        <img src="images/finance.jpg" alt="Some art" class="thumbnail">
         <ul class="skills">
           <li>Illustrator</li>
           <li>Photoshop</li>
@@ -34,9 +34,9 @@
       </div> 
 
       <div class="card">
-        <h2>More art at a glance.</h2>
-        <p>Cleveland skyline in sunset colors.</p>
-        <img src="images/ClevelandSkyline.jpg" alt="Some more art" class="thumbnail">
+        <h2>Cybersecurity Passion?</h2>
+        <p>Protecting digital realms is my calling, and what I have gained is an armor against cyber threats.</p>
+        <img src="images/Cyber.png" alt="Some more art" class="thumbnail">
         <ul class="skills">
           <li>Illustrator</li>
           <li>Photoshop</li>
@@ -46,9 +46,8 @@
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/AthenaOneFight?lang=en" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/khoss%C3%A9-samaha-2a1324298/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social linkedin">LinkedIn</a></li>
         
-        <li><a href="https://github.com/athenaozanich" class="social github">Github</a></li>
       </ul>
 
     </footer>
