--- a/experience.html
+++ b/experience.html
@@ -35,7 +35,7 @@
       <div class="card">
         <h2>Cybersecurity Passion?</h2>
         <p>Protecting digital realms is my calling, and what I have gained is an armor against cyber threats.</p>
-        <img src="images/Cyber.png" alt="Some more art" class="thumbnail">
+        <img src="images/cyber.png" alt="Some more art" class="thumbnail">
         <ul class="skills">
           <li>Illustrator</li>
           <li>Photoshop</li>
