--- a/experience.html
+++ b/experience.html
@@ -12,13 +12,13 @@
         <ul class="nav">
           <li class="name">José Samaha</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
+          <li><a href="experience.html">My Story</a></li>
         </ul>
     </div>
 
     <header>
       <img src="images/me.png" alt="A glance at me!" class="profile-image">
-      <h1 class="tag name">A peek into my experience.</h1>
+      <h1 class="tag name">A peek into my story.</h1>
     </header>
   
     <main class="flex">
@@ -27,8 +27,7 @@
         <p>Finance is the backbone of every successful venture, and I wanted to master it to conquer the business world.</p>
         <img src="images/finance.jpg" alt="Some art" class="thumbnail">
         <ul class="skills">
-          <li>Illustrator</li>
-          <li>Photoshop</li>
+          <li>Bachelor of Business Administration</li>
         </ul>
       </div> 
 
