--- a/experience.html
+++ b/experience.html
@@ -28,16 +28,17 @@
         <img src="images/finance.jpg" alt="Some art" class="thumbnail">
         <ul class="skills">
           <li>Bachelor of Business Administration</li>
+          <li>AUL University</li>
         </ul>
       </div> 
 
       <div class="card">
-        <h2>Cybersecurity Passion?</h2>
-        <p>Protecting digital realms is my calling, and what I have gained is an armor against cyber threats.</p>
-        <img src="images/cyber.png" alt="Some more art" class="thumbnail">
+        <h2>Tech Enthusiast?</h2>
+        <p>From hardware to networking, I've dived deep into the tech ocean to conquer every wave.</p>
+        <img src="images/networking.png" alt="Some more art" class="thumbnail">
         <ul class="skills">
-          <li>Illustrator</li>
-          <li>Photoshop</li>
+          <li>Successfully completed the Networking and Computer Hardware Certifications - Jan 9, 2024</li>
+          <li>CISCO Certified</li>
         </ul> 
       </div> 
 
