--- a/experience.html
+++ b/experience.html
@@ -35,7 +35,7 @@
       <div class="card">
         <h2>Tech Enthusiast?</h2>
         <p>From hardware to networking, I've dived deep into the tech ocean to conquer every wave.</p>
-        <img src="images/networking.png" alt="Some more art" class="thumbnail">
+        <img src="images/networking.PNG" alt="Some more art" class="thumbnail">
         <ul class="skills">
           <li>Successfully completed the Networking and Computer Hardware Certifications - Jan 9, 2024</li>
           <li>CISCO Certified</li>
