--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         <p>I am</p>
       </div>
 
+      <!-- The video -->
+<video autoplay muted loop id="myVideo">
+  <source src="https://www.youtube.com/watch?v=nIKM1Y9PEME&list=TLGGBlQJGLrKyaEwOTA3MjAyNA" type="video/mp4">
+</video>
+      
       <div class="card">
         <h2>My goals at a glance.</h2>
         <p>My goals are to increase my proficiency, skill and knowledge in the fields listed below. However I also have a strong desire to learn new skills and grow even more versitle as a designer and developer.</p>
