--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
       <ul>
         <li><a href="https://www.linkedin.com/in/khoss%C3%A9-samaha-2a1324298/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social linkedin">LinkedIn</a></li>
       </ul>
-
+      
+<video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+  <source src="https://assets.codepen.io/6093409/river.mp4" type="video/mp4">
+</video>
+      
     </footer>
   </body>
   </html>
