--- a/experience.html
+++ b/experience.html
@@ -49,6 +49,10 @@
         
       </ul>
 
+<video id="background-video" autoplay loop muted poster="images/trophy.png">
+  <source src="images/trophy.mp4" type="video/mp4">
+</video>
+      
     </footer>
   </body>
   </html>
