--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <header>
       <img src="images/me.png" alt="A glance at me!" class="profile-image">
-      <TEXT-TAG style="font-size:5;"><h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1></TEXT-TAG>
+      <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
     </header>
 
     <main class="flex">
