--- a/experience.html
+++ b/experience.html
@@ -18,7 +18,7 @@
 
     <header>
       <img src="images/me.png" alt="A glance at me!" class="profile-image">
-      <h1 class="tag name">A peek into my story.</h1>
+      <h1 class="tag name">A peek into my story</h1>
     </header>
   
     <main class="flex">
