--- a/experience.html
+++ b/experience.html
@@ -27,7 +27,7 @@
         <p>Finance is the backbone of every successful venture, and I wanted to master it to conquer the business world.</p>
         <img src="images/finance.jpg" alt="Some art" class="thumbnail">
         <ul class="skills">
-          <li>Bachelor of Business Administration</li>
+          <li>Successfully completed: Bachelor of Business Administration in Finance - Jan 1, 2022</li>
           <li>AUL University</li>
         </ul>
       </div> 
@@ -37,7 +37,7 @@
         <p>From hardware to networking, I've dived deep into the tech ocean to conquer every wave.</p>
         <img src="images/networking.PNG" alt="Some more art" class="thumbnail">
         <ul class="skills">
-          <li>Successfully completed the Networking and Computer Hardware Certifications - Jan 9, 2024</li>
+          <li>Successfully completed: Computer Hardware and Networking Certifications - Jan 9, 2024</li>
           <li>CISCO Certified</li>
         </ul> 
       </div> 
