--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
           <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
+
+    <header></header>
     
+    <header></header>
+
     <header>
       <img src="images/me.png" alt="A glance at me!" class="profile-image">
       <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
