--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+<style>
+h1 {
+  top: 100px;
+}
+</style>
   <meta charset="utf-8">
   <title>José Samaha's Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
