--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <style>
 h1 {
   position: absolute;
-  top: 250px;
-  left: 100px;
+  top: 300px;
+  left: 250px;
 }
+h3 {
+  position: absolute;
+  top: 300px;
+  left: 250px;
 </style>
   <meta charset="utf-8">
   <title>José Samaha's Portfolio</title>
@@ -24,7 +28,7 @@ h1 {
     </div>
     
     <header>
-      <img src="images/me.png" alt="A glance at me!" class="profile-image">
+      <h3><img src="images/me.png" alt="A glance at me!" class="profile-image"></h3>
       <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
     </header>
 
