--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 h1 {
   position: absolute;
   top: 300px;
-  text-align: center;
+  align: center;
 }
 h3 {
   position: absolute;
-  top: 150px;
-  text-align: center;
+  top: 100px;
+  align: center;
 </style>
   <meta charset="utf-8">
   <title>José Samaha's Portfolio</title>
