--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <style>
 h1 {
   position: absolute;
-  top: 300px;
-  align: center;
+  top: 350px;
 }
 h3 {
   position: absolute;
   top: 100px;
-  align: center;
 </style>
   <meta charset="utf-8">
   <title>José Samaha's Portfolio</title>
@@ -28,8 +26,8 @@ h3 {
     </div>
     
     <header>
-      <h3><img src="images/me.png" alt="A glance at me!" class="profile-image"></h3>
-      <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
+      <h3 align="center"><img src="images/me.png" alt="A glance at me!" class="profile-image"></h3>
+      <h1 class="tag name" align="center">Hello! I’m José, welcome to my portfolio.</h1>
     </header>
 
     <main class="flex">
