--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 h1 {
   position: absolute;
   top: 350px;
-  left: 300px;
+  left: 342px;
 }
 h3 {
   position: absolute;
   top: 100px;
-  left: 300px;
+  left: 342px;
 </style>
   <meta charset="utf-8">
   <title>José Samaha's Portfolio</title>
@@ -28,8 +28,8 @@ h3 {
     </div>
     
     <header>
-      <h3><img src="images/me.png" alt="A glance at me!" class="profile-image"></h3>
-      <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
+      <h3 style="text-align:center;"><img src="images/me.png" alt="A glance at me!" class="profile-image"></h3>
+      <h1 style="text-align:center;" class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
     </header>
 
     <main class="flex">
