--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-<style>
-h1 {
-  position: absolute;
-  top: 350px;
-}
-h3 {
-  position: absolute;
-  top: 100px;
-</style>
   <meta charset="utf-8">
   <title>José Samaha's Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,8 +17,8 @@ h3 {
     </div>
     
     <header>
-      <h3 style="text-align:center;"><img src="images/me.png" alt="A glance at me!" class="profile-image"></h3>
-      <h1 style="text-align:center;" class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
+      <h3><img src="images/me.png" alt="A glance at me!" class="profile-image"></h3>
+      <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
     </header>
 
     <main class="flex">
