--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     
     <header>
-      <h3><img src="images/me.png" alt="A glance at me!" class="profile-image"></h3>
+      <img src="images/me.png" alt="A glance at me!" class="profile-image">
       <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
     </header>
 
