--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>José Samaha's Portfolio</title>
+  <title>José's Personal Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -11,35 +11,34 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">José Samaha</li>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">About</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
     
     <header>
       <img src="images/me.png" alt="A glance at me!" class="profile-image">
-      <h1 class="tag name">Hello! I’m José, welcome to my portfolio.</h1>
+      <h1 class="tag name">José's Portfolio</h1>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>About me</h2>
-        <p>I am</p>
+        <p>As a Finance graduate, an IT technician and a Cybersecurity student, I have a passion for becoming a CyberOps Associate and for learning new speaking languages. I'm also looking forward to becoming a member of an Anti-Bullying community, as my other goal also is to help the society and spread hope.</p>
       </div>
       
       <div class="card">
-        <h2>My goals at a glance.</h2>
-        <p>My goals are to increase my proficiency, skill and knowledge in the fields listed below. However I also have a strong desire to learn new skills and grow even more versitle as a designer and developer.</p>
+        <h2>My skills</h2>
+        <p>Having to work in the hospitality field for a couple of years have helped me earn great communication skills and create excellent teamwork and time management strategies. I have always had the passion to find and create new solutions for every problem I had to encounter in the tech field, which helped me train my problem-solving skills and comprehend how to fully maintain an office or home device.</p>
         <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Php</li>
-          <li>Illustrator</li>
-          <li>Photoshop</li>
-          <li>Logo and Branding</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>Communication</li>
+          <li>Teamwork</li>
+          <li>Time Management</li>
+          <li>Microsoft Office</li>
+          <li>Operating Systems</li>
+          <li>Fast Typer</li>
+          <li>Computer Troubleshooting</li>
+          <li>Device Maintenance</li>
         </ul>
         <p>I'd like to work for a firm or company helping clients achieve their goals and in the process help the company and myself acheive our own respective goals. I get great satisfaction in helping others, and from the satifaction they get fron the experience.</p>
       </div>
