--- a/experience.html
+++ b/experience.html
@@ -11,14 +11,14 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">José Samaha</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">My Story</a></li>
+          <li><a href="index.html">About</a></li>
+          <li><a href="experience.html">My Education</a></li>
         </ul>
     </div>
 
     <header>
       <img src="images/me.png" alt="A glance at me!" class="profile-image">
-      <h1 class="tag name">A peek into my story</h1>
+      <h1 class="tag name">My Career Path</h1>
     </header>
   
     <main class="flex">
@@ -27,17 +27,17 @@
         <p>Finance is the backbone of every successful venture, and I wanted to master it to conquer the business world.</p>
         <img src="images/finance.jpg" alt="Some art" class="thumbnail">
         <ul class="skills">
-          <li>Successfully completed: Bachelor of Business Administration in Finance - Jan 1, 2022</li>
+          <li>Successfully completed: Bachelor of Business Administration in Finance on the first of January in 2022.</li>
           <li>AUL University</li>
         </ul>
       </div> 
 
       <div class="card">
         <h2>Tech Enthusiast?</h2>
-        <p>From hardware to networking, I've dived deep into the tech ocean to conquer every wave.</p>
+        <p>From Hardware to Networking to CyberSecurity, I've dived deep into the tech and cyber ocean to conquer every wave.</p>
         <img src="images/networking.PNG" alt="Some more art" class="thumbnail">
         <ul class="skills">
-          <li>Successfully completed: Computer Hardware and Networking Certifications - Jan 9, 2024</li>
+          <li>Successfully completed: Computer Hardware, Networking, Operating Systems and Cybersecurity Certifications.</li>
           <li>CISCO Certified</li>
         </ul> 
       </div> 
