--- a/experience.html
+++ b/experience.html
@@ -18,7 +18,7 @@
 
     <header>
       <img src="images/me.png" alt="A glance at me!" class="profile-image">
-      <h1 class="tag name">My Career Path</h1>
+      <h1 class="tag name">A peek into my career path..</h1>
     </header>
   
     <main class="flex">
@@ -27,7 +27,7 @@
         <p>Finance is the backbone of every successful venture, and I wanted to master it to conquer the business world.</p>
         <img src="images/finance.jpg" alt="Some art" class="thumbnail">
         <ul class="skills">
-          <li>Successfully completed: Bachelor of Business Administration in Finance on the first of January in 2022.</li>
+          <li>Successfully completed: Bachelor of Business Administration in Finance on the first of January 2022.</li>
           <li>AUL University</li>
         </ul>
       </div> 
