--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="nav">
           <li class="name">José Samaha</li>
           <li><a href="index.html">About</a></li>
-          <li><a href="experience.html">Experience</a></li>
+          <li><a href="experience.html">My Education</a></li>
         </ul>
     </div>
     
@@ -29,7 +29,7 @@
       
       <div class="card">
         <h2>My skills</h2>
-        <p>Having to work in the hospitality field for a couple of years have helped me earn great communication skills and create excellent teamwork and time management strategies. I have always had the passion to find and create new solutions for every problem I had to encounter in the tech field, which helped me train my problem-solving skills and comprehend how to fully maintain an office or home device.</p>
+        <p>Having to work in the hospitality field for a couple of years have helped me earn great communication skills and create excellent teamwork and time management strategies. I have always had the passion to find and create new solutions for every problem I had to encounter in the tech field, which helped me gain problem-solving skills and comprehend how to fully maintain an office or home device.</p>
         <ul class="skills">
           <li>Communication</li>
           <li>Teamwork</li>
@@ -39,8 +39,7 @@
           <li>Fast Typer</li>
           <li>Computer Troubleshooting</li>
           <li>Device Maintenance</li>
-        </ul>
-        <p>I'd like to work for a firm or company helping clients achieve their goals and in the process help the company and myself acheive our own respective goals. I get great satisfaction in helping others, and from the satifaction they get fron the experience.</p>
+        </ul
       </div>
 
     </main>
