--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         <h2>About me                                                          </h2>
         <h2></h2>
         <p>As a Finance graduate, an IT technician and a Cybersecurity student, I have a passion for becoming a CyberOps Associate and for learning new speaking languages. I'm also looking forward to becoming a member of an Anti-Bullying community, as my other goal also is to help the society and spread hope.</p>
+      <ul class="skills">
+          <li>Finance</li>
+          <li>IT Technician</li>
+          <li>Cyber Student</li>
+          <li>S-T-B CyberOps Associate</li>
+          <li>S-T-B Anti-Bullying CM</li>
+        </ul>
       </div>
       
       <div class="card">
@@ -40,7 +47,7 @@
           <li>Fast Typer</li>
           <li>Computer Troubleshooting</li>
           <li>Device Maintenance</li>
-        </ul
+        </ul>
       </div>
 
     </main>
