--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
 
     <main class="flex">
       <div class="card">
-        <h2>About me                                                          </h2>
-        <h2></h2>
-        <p>As a Finance graduate, an IT technician and a Cybersecurity student, I have a passion for becoming a CyberOps Associate and for learning new speaking languages. I'm also looking forward to becoming a member of an Anti-Bullying community, as my other goal also is to help the society and spread hope.
-        
-        </p>
+        <h2>About me</h2>
+        <p>As a Finance graduate, an IT technician and a Cybersecurity student, I have a passion for becoming a CyberOps Associate and for learning new speaking languages. I'm also looking forward to becoming a member of an Anti-Bullying community, as my other goal also is to help the society and spread hope.</p>
       <ul class="skills">
           <li>Finance</li>
           <li>IT Technician</li>
