--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       <ul>
         <li><a href="https://www.linkedin.com/in/khoss%C3%A9-samaha-2a1324298/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social linkedin">LinkedIn</a></li>
       </ul>
+      <ul>
+        <li><a href="https://www.instagram.com/jose.samaha/" class="social insta">Instagram</a></li>
+      </ul>
       
 <video id="background-video" autoplay loop muted poster="images/trophy.png">
   <source src="images/trophy.mp4" type="video/mp4">
